--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.3.1",
     "next": "15.1.6",
-    "next-auth": "^4.24.11",
+    "next-auth": "5.0.0-beta.25",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -25,5 +25,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "bun ./prisma/seed.ts"
   }
 }
