--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@nanostores/query": "^0.3.4",
+    "@nanostores/react": "^0.8.4",
     "@prisma/client": "^6.3.1",
+    "nanostores": "^0.11.3",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
     "prisma": "^6.3.1",
